--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Vuetify 3</title>
+  <title>Pomodoro</title>
+  <meta name="title" content="Pomodoro">
+  <meta name="description" content="Vuetify 3 Pomodoro">
+  <meta name="theme-color" content="#1867C0">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#1867C0">
+  <meta name="msapplication-TileColor" content="#1867C0">
+  <link rel="apple-touch-icon" href="/img/icons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/img/icons/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/img/icons/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/img/icons/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/img/icons/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon-180x180.png">
 </head>
 
 <body>
@@ -13,4 +26,5 @@
   <script type="module" src="/src/main.js"></script>
 </body>
 
+// eslint-disable-next-line
 </html>
